# python

./: CHANGELOG.md  CNAME  README.md  SCRIPTS.txt  increment_init.py  increment_setup.py  increment_version.py  project.sh  publish.sh  pyproject.toml  pyproject.toml.bak  requirements.txt  setup.cfg  setup.py  test_import.py  version.sh
src/text2doc/: __init__.py  __init__.py.bak  _version.py  text2doc.py
tests/: __init__.py
