[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "text2doc"
dynamic = ["version"]
description = "Text to document conversion library"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
dependencies = [
    "grpcio==1.59.3",
    "grpcio-tools==1.59.3",
    "protobuf==4.25.1",
    "jinja2==3.1.2",
    "weasyprint==60.1",
]

[tool.setuptools_scm]
write_to = "src/text2doc/_version.py"
version_scheme = "post-release"
local_scheme = "node-and-date"
