[metadata]
name = text2doc
version = attr: text2doc.__version__
description = Generate text 2 docs
long_description = file: README.md
long_description_content_type = text/markdown
author = Tom Sapletta
author_email = info@softreck.dev
url = https://github.com/pyfunc/text2doc
license = Apache-2.0
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    grpcio==1.59.3
    grpcio-tools==1.59.3
    protobuf==4.25.1
    jinja2==3.1.2
    weasyprint==60.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    text2doc = text2doc.cli_with_shell:main

[mypy]
python_version = 3.7
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = --verbose --cov=text2doc --cov-report=term-missing

[coverage:run]
source = text2doc

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if __name__ == .__main__.:

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88